# reverb

./: .gitmodules
src/: CMakeLists.txt  CMakePresets.json  libliquid.patch  libwave.patch  main.c
src/display/: color565.h  display.c  display.h  font5x7.h  font7x11.h  st7735.c  st7735.h
src/encoder/: encoder.c  encoder.h
src/gdbSettings/: gdbinit
src/gpio/: gpio.c  gpio.h
src/input-output-device/: input-output-device.c  input-output-device.h
src/io-audio/: io-audio.c  io-audio.h
src/launchConfigs/eclipse/: Reverb-debug-ssh.launch
src/octave/: partitioned-conv.m  reverb.m
src/reverb/: reverb.c  reverb.h  upolsconv.cpp  upolsconv.hpp
src/spi/: spi.c  spi.h
src/tests/: tests.cpp
src/toolchains/: arm-toolchain.cmake
src/wav-reader/: wav-reader.c  wav-reader.h
